--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Hej!</string>
+    <string name="send_hej">Hej!</string>
+    <string name="send_off">Shortcut is off</string>
+    <string name="send_long_hej">Send Hej to Tomek</string>
 </resources>
